Basic video detail page for admin done

--- a/vitareact/src/components/css/videoplayer.css
+++ b/vitareact/src/components/css/videoplayer.css
@@ -69,7 +69,7 @@
     left: 0;
     width: 0;
     margin: auto;
-    background-color: var(--progress-color);
+    background: linear-gradient(to right, #fa761d, #ff1e74);
     transition: all ease var(--easing);
 }
 
@@ -96,7 +96,7 @@
     cursor: pointer;
 }
 .control-btn:hover {
-    color: #eb2b9b;
+    color: #ff1e74;
 }
 .time-control {
     display: flex;
@@ -115,12 +115,19 @@
     transition: 0.1s ease;
 }
 
-.start-time:hover, .end-time:hover {
-    color: #eb2b9b;
-    font-size: 15px;
+.start-time {
+    color: #fa751dc2;
+}
+.start-time:hover {
+    color: #fa761d;
+}
+.end-time {
+    color: #ff1e74cb;
+}
+.end-time:hover {
+    color: #ff1e74;
 }
 .time-slash {
-    color: #eb2b9b;
     margin: 0 5px;
     font-size: 25px;
 }
@@ -148,7 +155,7 @@
     margin: auto;
     height: 100%;
     width: 50%;
-    background-color: var(--progress-color);
+    background: linear-gradient(to right, #fa761d, #ff1e74);
     transition: all ease var(--easing);
 }
 
