report video, comment, list in admin done

--- a/vitareact/src/components/css/adminHome.css
+++ b/vitareact/src/components/css/adminHome.css
@@ -14,8 +14,10 @@
 
 .col {
     width: 45%;
-    height: 50vh;
+    height: 70vh;
     border: 1px solid black;
+    overflow-y: scroll;
+    padding-left: 40px;
 }
 
 #search-container {
