--- a/vitareact/src/components/css/forms.module.css
+++ b/vitareact/src/components/css/forms.module.css
@@ -7,10 +7,10 @@
     background: linear-gradient(to bottom right, var(--vita-dark-blue), var(--vita-pink));
 }
 
-.formContainer {
+.formContainer, .smallFormContainer, .mediumFormContainer {
     background: rgba(3, 3, 55, 0.144);
     width: 600px;
-    height: 550px;
+    height: 580px;
     margin: 200px auto;
     position: absolute;
     top: 0;
@@ -18,6 +18,14 @@
     right: 0;
     bottom: 0;
     border-radius: 6px;
+}
+
+.mediumFormContainer {
+    height: 460px;
+}
+
+.smallFormContainer {
+    height: 380px;
 }
 
 .form  {
