category results, video forms

--- a/vitareact/src/components/css/main.css
+++ b/vitareact/src/components/css/main.css
@@ -5,6 +5,7 @@
     --vita-pink: #eb2b9b;
     --vita-light-pink: #eb4ca8;
     --vita-orange: #fa761d;
+    --vita-light-orange: #ee833b;
     --vita-dark-grey: #b191c08c;
     --vita-dark-blue: #061a31;
     --vita-light-grey: #a2aebb;
