--- a/vitareact/src/components/css/videoPreplay.module.css
+++ b/vitareact/src/components/css/videoPreplay.module.css
@@ -126,6 +126,7 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     align-items: center;
+    padding-bottom: 15px;
 }
 
 .extrasItem {
