--- a/vitareact/src/components/css/forms.module.css
+++ b/vitareact/src/components/css/forms.module.css
@@ -31,7 +31,7 @@
 .form  {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-content: center;
     margin: 70px auto 0;
 }
@@ -47,7 +47,7 @@
     border-radius: 6px 6px 0 0;
 }
 
-.input, .error {
+.input, .error, .videoInput {
     background: transparent;
     border: 0;
     border: 1px solid ;
@@ -79,7 +79,7 @@
     color: #d3d3d3;
 }
 
-.submitBtn {
+.submitBtn, .videoSubmitBtn, .dangerBtn {
     background: var(--vita-light-pink);
     border: 0;
     display: block;
@@ -93,15 +93,24 @@
     transition: all 0.1s ease-out;
 }
 
-.submitBtn:focus {
+.dangerBtn {
+    width: 300px;
+    height: 50px;
+    background-color: var(--vita-light-orange);
+}
+
+.submitBtn:focus, .videoSubmitBtn:focus, .dangerBtn:focus {
     outline: none;
 }
 
-.submitBtn:hover {
+.submitBtn:hover, .videoSubmitBtn:hover {
     background: var(--vita-pink);
 }
+.dangerBtn:hover {
+    background-color: var(--vita-orange);
+}
 
-.submitBtn:active {
+.submitBtn:active, .videoSubmitBtn:active, .dangerBtn:active{  
     transform: scale(0.98);
 }
 
@@ -126,7 +135,106 @@
 }
 
 @media (max-width: 900px) {
-    .formContainer {
+    .formContainer, .smallFormContainer, .mediumFormContainer {
+        width: 80%;
+        margin: 120px auto;
+    }
+}
+
+/* forms for create and edit videos */
+.videoFormContainer {
+    background: rgba(3, 3, 55, 0.144);
+    width: 80%;
+    height: 730px;
+    margin: 120px auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 6px;
+}
+
+.videoFormRow {
+    margin-top: 40px;
+    height: 570px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    flex-direction: row;
+}
+
+.videoFormCol {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-content: flex-start;
+    height: 460px;
+    width: 50%;
+}
+
+.videoSubmitBtn {
+    width: 300px;
+    height: 50px;
+}
+
+.videoInput {
+    width: 85%;
+}
+
+.videoSelectInputContainer {
+    width: 100%;
+}
+
+.videoSelectInputContainer select {
+    display: flex;
+    margin: auto;
+    border: 0;
+    border: 1px solid;
+    width: 85%;
+    padding: 10px;
+    background: transparent;
+    border: 1px solid ;
+    border-left: 5px solid;
+    color: var(--vita-dark-blue);
+    background-color: #d3d3d318;
+}
+
+.videoSelectInputContainer option {
+    color: #d3d3d3;
+    background-color: var(--vita-dark-blue);
+}
+
+.videoSelectInputContainer select:focus {
+    outline: 0;
+    color: var(--vita-dark-blue);
+    color: white;
+}
+
+.uploadProgress  {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 0;
+}
+
+.uploadProgress div {
+    width: 20%;
+}
+
+
+@media (max-width: 900px) {
+    .formBG {
+        height: 180vh;
+    }
+    .videoFormContainer {
+        height: 160vh;
+    }
+    .videoFormCol {
+        width: 100%;
+    }
+    .videoSubmitBtn {
         width: 80%;
     }
+    
 }
