--- a/vitareact/src/components/css/categoryItem.css
+++ b/vitareact/src/components/css/categoryItem.css
@@ -1,30 +1,9 @@
 
-.categoryContainer {
-    margin: 40px 20px;
-    background-color: var(--vita-dark-blue);
-    padding: 0 10px 40px 10px;
-    border-radius: 6px;
-}
-.categoryContainerHeading {
-    color: whitesmoke;
-    margin: 0;
-    padding: 10px;
-    font-size: 40px;
-}
-.categoryRow {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.categoryColumn {
-    flex: 16.66%;
-    max-width: 16.66%;
-    padding: 0 6px;
-}
+/* styling for category items */
 
 .category {
-    width: 100%;
-    margin-top: 12px;
+    width: 350px;
+    margin: 8px;
     cursor: pointer;
     transition: 0.3s;
     position: relative;
@@ -34,7 +13,7 @@
 .categoryImage {
     width: 100%;
     border-radius: 4px;
-    opacity: 0.65;
+    opacity: 0.75;
 }
 
 .categoryName {
@@ -60,20 +39,7 @@
 }
 
 @media screen and (max-width: 900px) {
-    .categoryColumn {
-        flex: 32%;
-        max-width: 32%;
-    }
     .categoryName {
         font-size: 16px;
     }
 }
-
-@media screen and (max-width: 600px) {
-    .categoryColumn {
-        flex: 50%;
-        max-width: 50%;
-    }
-}
-
-    
