--- a/vitareact/src/components/css/main.css
+++ b/vitareact/src/components/css/main.css
@@ -7,6 +7,7 @@
     --vita-orange: #fa761d;
     --vita-light-orange: #ee833b;
     --vita-dark-grey: #b191c08c;
+    --vita-light-blue: #0f2947;
     --vita-dark-blue: #061a31;
     --vita-light-grey: #a2aebb;
     --easing: 0.25s;
