--- a/vitareact/src/components/css/main.css
+++ b/vitareact/src/components/css/main.css
@@ -6,6 +6,8 @@
     --vita-light-pink: #eb4ca8;
     --vita-orange: #fa761d;
     --vita-light-orange: #ee833b;
+    --vita-light-green: #13e069;
+    --vita-bright-blue: #63bdf1;
     --vita-dark-grey: #b191c08c;
     --vita-light-blue: #0f2947;
     --vita-dark-blue: #061a31;
