--- a/vitareact/src/components/css/header.module.css
+++ b/vitareact/src/components/css/header.module.css
@@ -22,7 +22,9 @@
 }
 
 .openbtn {
-	color: white;
+	background: linear-gradient(to right, var(--vita-bright-blue), white);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 	font-size: 25px;
 }
 
@@ -50,7 +52,9 @@
 	padding: 10px 0 10px 15px;
 	background-color: var(--vita-dark-blue);
 	text-align: left;
-	color: white;
+	background: linear-gradient(to right, var(--vita-bright-blue), white);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 	font-size: 18px;
 	font-weight: bold;
 	line-height: 2;
@@ -63,7 +67,6 @@
 
 .navItem:hover {
 	transform: translateX(5px);
-	color: var(--vita-orange);
 }
 
 .icon {
@@ -72,6 +75,9 @@
 	top: 0;
 	width: 40px;
 	text-align: center;
+	background: linear-gradient(to right, var(--vita-bright-blue), white);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 @media (min-width: 900px) {
