--- a/vitareact/src/components/css/row.module.css
+++ b/vitareact/src/components/css/row.module.css
@@ -2,6 +2,13 @@
 	color: white;
 	margin-left: 1rem;
 }
+.row > h2 {
+	width: 250px;
+	padding-left: 5px;
+	background: linear-gradient(to right, var(--vita-bright-blue), white);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 .row_posters {
 	display: flex;
 	overflow-y: hidden;
